5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1582_1331.log
== TEST (2019-03-12 17:47:19) 
-- CODE:
print(50/3%4)
-- OUTPUT:
0.6666666666666679
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:47:21) 
-- CODE:
print(50/3%4)
-- EXECUTION TIME:
0.213188
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:32) 
-- CODE:
print(50//3%4)
-- OUTPUT:
0.6666666666666679
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:47:33) 
-- CODE:
print(50//3%4)
-- EXECUTION TIME:
0.156773
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:49) 
-- CODE:
print(50//%4)
-- ERROR:
File "XXXX", line 1
    print(50//%4)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:47:51) 
-- CODE:
print(50//%4)
-- EXECUTION TIME:
0.182592
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 1
    print(50//%4)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:47:54) 
-- CODE:
print(50%4)
-- EXECUTION TIME:
0.290764
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:48:03) 
-- CODE:
print(/50%4/)
-- ERROR:
File "XXXX", line 1
    print(/50%4/)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:48:04) 
-- CODE:
print(/50%4/)
-- EXECUTION TIME:
0.201711
-- ERROR:
  File "/home/codebench/codes/1582/1331/main.py", line 1
    print(/50%4/)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:49:05) 
-- CODE:
print(50 % 3)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:49:08) 
-- CODE:
print(50 % 3)
-- EXECUTION TIME:
0.117885
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:49:10) 
-- CODE:
print(50 % 3)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:49:19) 
-- CODE:
print(/50 % 3/)
-- ERROR:
File "XXXX", line 1
    print(/50 % 3/)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:49:29) 
-- CODE:
print(50 /%/ 3)
-- ERROR:
File "XXXX", line 1
    print(50 /%/ 3)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:49:57) 
-- CODE:
print(50//3)
print(50%3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:49:58) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.296088
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
